ocpdev-255bx/workloads/blue-green-app/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: blue-green-app
  finalizers:
  - resources-finalizer.argocd.argoproj.io
spec: {}
status: {}
