ocpdev-255bx/workloads/blue-green-app/route-preview.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/instance: blue-green-app
  name: live-traffic
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: rollout-bluegreen-preview
    weight: null
status: {}
